<?xml version="1.0" encoding="utf-8"?>
<layout>
    <com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small">

            <TextView
                android:id="@+id/tv_destination_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="wrap"
                app:layout_constraintWidth_percent="0.7"
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:text="@string/destination"/>

            <TextView
                android:id="@+id/tv_destination_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_destination_header"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_max="wrap"
                app:layout_constraintWidth_percent="0.7"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                tools:text="@string/tools_destination" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />

            <TextView
                android:id="@+id/tv_due_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="wrap"
                app:layout_constraintWidth_percent="0.3"
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:text="@string/due_in" />

            <TextView
                android:id="@+id/tv_due_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_due_header"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_max="wrap"
                app:layout_constraintWidth_percent="0.3"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                tools:text="@string/tools_due_mins" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>